@@ -27,30 +27,27 @@ import org.apache.pig.impl.logicalLayer.schema.Schema;
 
 
 /**
- * Generates the concatenation of the first two fields of a tuple.
+ * Generates the concatenation of all fields of a tuple.
  */
 public class StringConcat extends EvalFunc<String> {
 
     @Override
     public String exec(Tuple input) throws IOException {
-        try {
-            String s1 = (String)(input.get(0));
-            String s2 = (String)(input.get(1));
-            if(s1 != null && s2 != null)
-            {
-                StringBuilder sb = new StringBuilder();
-                sb.append(s1);
-                sb.append(s2);
-                return sb.toString();
-            } else {
-                return null;
-            } 
+        try{
+        if (input == null || input.size() == 0)
+          return null;
+
+          StringBuilder sb = new StringBuilder();
+          for (int i = 0; i < input.size(); i++){
+            sb.append(String.valueOf(input.get(i)));
+          }
+          return sb.toString();
         } catch (ExecException exp) {
             throw exp;
         } catch (Exception e) {
             int errCode = 2106;
             String msg = "Error while computing concat in " + this.getClass().getSimpleName();
-            throw new ExecException(msg, errCode, PigException.BUG, e);          
+            throw new ExecException(msg, errCode, PigException.BUG, e);
         }
     }
     
